scripts/nullaway/annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8.txt
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/gui/EvaluatorGUI.java:243: error: [NullAway] dereferenced expression system is @Nullable
					outNumerical.setText(system.printValues(rules, true)+"\nProbability: "+system.getQuickProbability(rules));					
					                           ^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/gui/quantum/Qubit.java:308: error: [NullAway] dereferenced expression menu_types is @Nullable
		if (id < menu_types.length) {
		                   ^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/gui/quantum/Qubit.java:359: error: [NullAway] dereferenced expression highest_qubit is @Nullable
		final int highest_id = highest_qubit.id;
		                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/gui/quantum/Item.java:37: error: [NullAway] @NonNull field icon not initialized
	protected BufferedImage icon;
	                        ^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/gui/quantum/Corrector.java:63: error: [NullAway] initializer method does not guarantee @NonNull fields i1 (line 40), i2 (line 40) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Corrector(final corrtype t) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/gui/quantum/Corrector.java:314: error: [NullAway] assigning @Nullable expression to @NonNull field
				i1 = null;
				   ^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/gui/quantum/Corrector.java:315: error: [NullAway] assigning @Nullable expression to @NonNull field
				i2 = null;
				   ^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/gui/quantum/Corrector.java:328: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/gui/quantum/Visualizer.java:75: error: [NullAway] initializer method does not guarantee @NonNull fields g (line 53), item_for_menu (line 69), inv (line 71) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Visualizer() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/gui/quantum/Entangler.java:35: error: [NullAway] initializer method does not guarantee @NonNull fields i1 (line 31), i2 (line 31) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Entangler() {}
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/gui/quantum/Entangler.java:152: error: [NullAway] assigning @Nullable expression to @NonNull field
				i1 = null;
				   ^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/gui/quantum/Entangler.java:153: error: [NullAway] assigning @Nullable expression to @NonNull field
				i2 = null;
				   ^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/gui/quantum/Entangler.java:166: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/experiments/ExperimTest.java:158: error: [NullAway] @NonNull field ExperimTest$ExperimentalResult.csv not initialized
		public CSVExporter csv;
		                   ^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/gui/ExperimentConductor.java:216: error: [NullAway] dereferenced expression image is @Nullable
			setPreferredSize(new Dimension(image.getWidth(), image.getHeight()));
			                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/math/MathExpression.java:316: error: [NullAway] dereferenced expression p1it is @Nullable
						if (p1it.add(p2it)) {
						        ^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/math/MathExpression.java:435: error: [NullAway] dereferenced expression m is @Nullable
			multiple.add(m.clone());
			              ^
    (see http://t.uber.com/nullaway )
../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/math/MathFract.java:151: error: [NullAway] unboxing of a @Nullable value
		final int minn = min(numbers);
		                    ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url416ee5b4ee_martinmarinov_HonProj_tgz-pJ8-martin_gui_MainJ8/src/martin/experiments/Worksheet.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
18 errors
